fixed issues with contact section spacing

--- a/style.css
+++ b/style.css
@@ -249,9 +249,9 @@ a {
     .carousel-container .card {
         height: 250px !important;
     }
-    .contact-us-div {
+    /* .contact-us-div {
         margin-bottom: 6rem !important;
-    }
+    } */
 }
 
 
